net/mlx4: Adapt num_vfs/probed_vf params for single port VF (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16802,6 +16802,7 @@
 	patches.drivers/mlx4-0196-net-mlx4-Add-data-structures-to-support-N-Ports-per-.patch
 	patches.drivers/mlx4-0197-net-mlx4-Add-utils-for-N-Port-VFs.patch
 	patches.drivers/mlx4-0198-net-mlx4-Adapt-code-for-N-Port-VF.patch
+	patches.drivers/mlx4-0199-net-mlx4-Adapt-num_vfs-probed_vf-params-for-single-p.patch
 
 	########################################################
 	# Wireless Networking
