net/mlx4_en: Expose port number through sysfs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16780,6 +16780,7 @@
 	patches.drivers/mlx4-0174-IB-Report-using-RoCE-IP-based-gids-in-port-caps.patch
 	patches.drivers/mlx4-0175-net-mlx4-Set-number-of-RX-rings-in-a-utility-functio.patch
 	patches.drivers/mlx4-0176-net-mlx4-Fix-limiting-number-of-IRQ-s-instead-of-RSS.patch
+	patches.drivers/mlx4-0177-net-mlx4_en-Expose-port-number-through-sysfs.patch
 
 	########################################################
 	# Wireless Networking
