net/mlx4_core: Fix the error flow when probing with invalid VF configuration (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16837,6 +16837,7 @@
 	patches.drivers/mlx4-0231-net-mlx4_core-Keep-only-one-driver-entry-release-mlx.patch
 	patches.fixes/cpumask-Utility-function-to-set-n-th-cpu-local-cpu-f.patch
 	patches.drivers/mlx4-0233-net-mlx4_en-Use-affinity-hint.patch
+	patches.drivers/mlx4-0234-net-mlx4_core-Fix-the-error-flow-when-probing-with-i.patch
 
 	########################################################
 	# Wireless Networking
