net/mlx4_en: Fix mac_hash database inconsistency (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16843,6 +16843,7 @@
 	patches.drivers/mlx4-0237-net-mlx4-Verify-port-number-in-__mlx4_unregister_mac.patch
 	patches.drivers/mlx4-0238-net-mlx4_en-Do-not-disable-vlan-filter-during-promis.patch
 	patches.drivers/mlx4-0239-net-mlx4_en-Do-not-count-LLC-SNAP-in-MTU-calculation.patch
+	patches.drivers/mlx4-0240-net-mlx4_en-Fix-mac_hash-database-inconsistency.patch
 
 	########################################################
 	# Wireless Networking
