--- a/series.conf
+++ b/series.conf
@@ -16714,6 +16714,7 @@
 	patches.drivers/mlx4-0108-IB-mlx4-Use-default-pkey-when-creating-tunnel-QPs.patch
 	patches.drivers/mlx4-0109-net-mlx4_core-Don-t-give-VFs-MAC-addresses-which-are.patch
 	patches.drivers/mlx4-0110-net-mlx4_core-VFs-must-ignore-the-enable_64b_cqe_eqe.patch
+	patches.drivers/mlx4-0111-mlx4_core-Fix-XRC-QPs-detection-in-the-resource-trac.patch
 
 	########################################################
 	# Wireless Networking
