net/mlx4_en: Cleanup MAC resources on module unload or port stop (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16650,6 +16650,7 @@
 	patches.drivers/mlx4-0044-net-mlx4_core-Turn-off-device-managed-FS-bit-in-dev-.patch
 	patches.drivers/mlx4-0045-net-mlx4_core-Fix-endianness-bug-in-set_param_l.patch
 	patches.drivers/mlx4-0046-net-mlx4_en-Fix-race-when-setting-the-device-MAC-add.patch
+	patches.drivers/mlx4-0047-net-mlx4_en-Cleanup-MAC-resources-on-module-unload-o.patch
 
 	########################################################
 	# Wireless Networking
