--- a/series.conf
+++ b/series.conf
@@ -16727,6 +16727,7 @@
 	patches.drivers/mlx4-0121-net-mlx4_en-Check-device-state-when-setting-coalesci.patch
 	patches.drivers/mlx4-0122-net-mlx4_en-Rename-name-of-mlx4_en_rx_alloc-members.patch
 	patches.drivers/mlx4-0123-net-mlx4_en-Fix-pages-never-dma-unmapped-on-rx.patch
+	patches.drivers/mlx4-0124-net-mlx4-Clean-the-code-to-eliminate-trivial-build-w.patch
 
 	########################################################
 	# Wireless Networking
