net/mlx4_en: Align tx path structures to cache lines (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16882,6 +16882,7 @@
 	patches.drivers/mlx4-0276-net-mlx4_core-Protect-QUERY_PORT-wrapper-from-untrus.patch
 	patches.drivers/mlx4-0277-net-mlx4_core-Deprecate-error-message-at-ConnectX-2-.patch
 	patches.drivers/mlx4-0278-net-mlx4_en-Code-cleanups-in-tx-path.patch
+	patches.drivers/mlx4-0279-net-mlx4_en-Align-tx-path-structures-to-cache-lines.patch
 
 	########################################################
 	# Wireless Networking
