--- a/series.conf
+++ b/series.conf
@@ -16691,6 +16691,7 @@
 	patches.drivers/mlx4-0085-mlx4_core-Directly-expose-fields-of-DMFS-HW-rule-con.patch
 	patches.drivers/mlx4-0086-mlx4_core-Expose-a-few-helpers-to-fill-DMFS-HW-struc.patch
 	patches.drivers/mlx4-0087-net-mlx4_core-Add-missing-report-on-VST-and-spoof-ch.patch
+	patches.drivers/mlx4-0088-net-mlx4-Strengthen-VLAN-tags-priorities-enforcement.patch
 
 	########################################################
 	# Wireless Networking
