--- a/series.conf
+++ b/series.conf
@@ -16613,6 +16613,7 @@
 	patches.drivers/mlx4-0007-net-mlx4_en-Fix-a-race-when-closing-TX-queue.patch
 	patches.drivers/mlx4-0008-net-mlx4_en-Initialize-RFS-filters-lock-and-list-in-.patch
 	patches.drivers/mlx4-0009-net-mlx4_core-Directly-expose-fields-of-HW-flow-stee.patch
+	patches.drivers/mlx4-0010-net-mlx4_core-Set-correctly-allow_loopback-flag.patch
 
 	########################################################
 	# Wireless Networking
