IB: Report using RoCE IP based gids in port caps (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16777,6 +16777,7 @@
 	patches.drivers/mlx4-0171-net-mlx4_core-clean-up-srq_res_start_move_to.patch
 	patches.drivers/mlx4-0172-net-mlx4_core-Remove-unnecessary-validation-for-port.patch
 	patches.drivers/mlx4-0173-mlx4-Use-pci_enable_msix_range-instead-of-pci_enable.patch
+	patches.drivers/mlx4-0174-IB-Report-using-RoCE-IP-based-gids-in-port-caps.patch
 
 	########################################################
 	# Wireless Networking
