--- a/series.conf
+++ b/series.conf
@@ -16825,6 +16825,7 @@
 	patches.drivers/mlx4-0219-net-mlx4_en-User-prio-mapping-gets-corrupted-when-ch.patch
 	patches.drivers/mlx4-0220-net-mlx4_en-Fix-errors-in-MAC-address-changing-when-.patch
 	patches.drivers/mlx4-0221-net-mlx4_core-Fix-smatch-error-possible-access-to-a-.patch
+	patches.drivers/mlx4-0222-net-mlx4_core-Removed-unnecessary-bit-operation-cond.patch
 
 	########################################################
 	# Wireless Networking
