--- a/series.conf
+++ b/series.conf
@@ -16679,6 +16679,7 @@
 	patches.drivers/mlx4-0073-net-mlx4-Add-structures-to-keep-VF-Ethernet-ports-in.patch
 	patches.drivers/mlx4-0074-net-mlx4-Add-set-VF-mac-address-support.patch
 	patches.drivers/mlx4-0075-net-mlx4-Add-set-VF-default-vlan-ID-and-priority-sup.patch
+	patches.drivers/mlx4-0076-net-mlx4-Add-VF-MAC-spoof-checking-support.patch
 
 	########################################################
 	# Wireless Networking
