--- a/series.conf
+++ b/series.conf
@@ -16712,6 +16712,7 @@
 	patches.drivers/mlx4-0106-net-mlx4_core-Dynamic-VST-to-VST-vlan-qos-changes.patch
 	patches.drivers/mlx4-0107-net-mlx4-fix-small-memory-leak-on-error.patch
 	patches.drivers/mlx4-0108-IB-mlx4-Use-default-pkey-when-creating-tunnel-QPs.patch
+	patches.drivers/mlx4-0109-net-mlx4_core-Don-t-give-VFs-MAC-addresses-which-are.patch
 
 	########################################################
 	# Wireless Networking
