--- a/series.conf
+++ b/series.conf
@@ -16771,6 +16771,7 @@
 	patches.drivers/mlx4-0165-mlx4_en-Only-cycle-port-if-HW-timestamp-config-chang.patch
 	patches.fixes/PCI-Add-PCIe-Link-Capability-link-speed-and-width-na.patch
 	patches.drivers/mlx4-0167-net-mlx4_core-Warn-if-device-doesn-t-have-enough-PCI.patch
+	patches.drivers/mlx4-0168-mlx4_en-Select-PTP_1588_CLOCK.patch
 
 	########################################################
 	# Wireless Networking
