--- a/series.conf
+++ b/series.conf
@@ -16847,6 +16847,7 @@
 	patches.drivers/mlx4-0241-net-mlx4_en-Don-t-use-irq_affinity_notifier-to-track.patch
 	patches.drivers/mlx4-0242-net-mlx4_en-IRQ-affinity-hint-is-not-cleared-on-port.patch
 	patches.drivers/mlx4-0243-net-mlx4_en-Ignore-budget-on-TX-napi-polling.patch
+	patches.drivers/mlx4-0244-net-mlx4_core-Fix-leakage-of-SW-multicast-entries.patch
 
 	########################################################
 	# Wireless Networking
