mlx4: fix race accessing page->_count (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16897,6 +16897,7 @@
 	patches.drivers/mlx4-0291-net-mlx4_en-Enable-the-compiler-to-make-is_inline-in.patch
 	patches.drivers/mlx4-0292-net-mlx4_en-remove-NETDEV_TX_BUSY.patch
 	patches.drivers/mlx4-0293-net-add-netdev_txq_bql_-enqueue-complete-_prefetchw-.patch
+	patches.drivers/mlx4-0294-mlx4-fix-race-accessing-page-_count.patch
 
 	########################################################
 	# Wireless Networking
