--- a/series.conf
+++ b/series.conf
@@ -16785,6 +16785,7 @@
 	patches.drivers/mlx4-0179-net-mlx4_en-Fix-UP-limit-in-ieee_ets-prio_tc.patch
 	patches.drivers/mlx4-0180-net-mlx4_en-Verify-mlx4_en-module-parameters.patch
 	patches.drivers/mlx4-0181-net-mlx4_en-Pad-ethernet-packets-smaller-than-17-byt.patch
+	patches.drivers/mlx4-0182-net-mlx4_en-Move-queue-stopped-waked-counters-to-be-.patch
 
 	########################################################
 	# Wireless Networking
