net/mlx4_core: Don't disable SRIOV if there are active VFs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16877,6 +16877,7 @@
 	patches.drivers/mlx4-0271-net-mlx4_core-Cache-line-EQE-size-support.patch
 	patches.drivers/mlx4-0272-net-mlx4_en-Add-mlx4_en_get_cqe-helper.patch
 	patches.drivers/mlx4-0273-mellanox-Change-en_print-to-return-void.patch
+	patches.drivers/mlx4-0274-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
 
 	########################################################
 	# Wireless Networking
