net/mlx4_core: Preserve pci_dev_data after __mlx4_remove_one() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16809,6 +16809,7 @@
 	patches.drivers/mlx4-0203-net-mlx4_core-pass-pci_device_id.driver_data-to-__ml.patch
 	patches.drivers/mlx4-0204-mlx4_core-Fix-some-indenting-in-mlx4_ib_add.patch
 	patches.drivers/mlx4-0205-mlx4_core-Make-buffer-larger-to-avoid-overflow-warni.patch
+	patches.drivers/mlx4-0206-net-mlx4_core-Preserve-pci_dev_data-after-__mlx4_rem.patch
 
 	########################################################
 	# Wireless Networking
