net/mlx4_core: Use low memory profile on kdump kernel (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16855,6 +16855,7 @@
 	patches.drivers/mlx4-0249-net-mlx4_en-cq-irq_desc-wasn-t-set-in-legacy-EQ-s.patch
 	patches.drivers/mlx4-0250-net-mlx4_en-current_mac-isn-t-updated-in-port-up.patch
 	patches.drivers/mlx4-0251-net-mlx4_en-Disable-blueflame-using-ethtool-private-.patch
+	patches.drivers/mlx4-0252-net-mlx4_core-Use-low-memory-profile-on-kdump-kernel.patch
 
 	########################################################
 	# Wireless Networking
