--- a/series.conf
+++ b/series.conf
@@ -16880,6 +16880,7 @@
 	patches.drivers/mlx4-0274-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
 	patches.drivers/mlx4-0275-net-mlx4_core-New-init-and-exit-flow-for-mlx4_core.patch
 	patches.drivers/mlx4-0276-net-mlx4_core-Protect-QUERY_PORT-wrapper-from-untrus.patch
+	patches.drivers/mlx4-0277-net-mlx4_core-Deprecate-error-message-at-ConnectX-2-.patch
 
 	########################################################
 	# Wireless Networking
