treewide: Replace incomming with incoming in all comments and strings (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16634,6 +16634,7 @@
 	patches.drivers/mlx4-0028-net-mlx4_en-Implement-ndo-fdb-functionality.patch
 	patches.drivers/mlx4-0029-mlx4_en-Fix-BQL-reset-TX-queue-call-point.patch
 	patches.drivers/mlx4-0030-drivers-net-Remove-remaining-alloc-OOM-messages.patch
+	patches.drivers/mlx4-0031-treewide-Replace-incomming-with-incoming-in-all-comm.patch
 
 	########################################################
 	# Wireless Networking
