radix-tree: introduce bit-optimized iterator (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16819,6 +16819,7 @@
 	patches.drivers/mlx4-0213-IB-mlx4-SET_PORT-called-by-mlx4_ib_modify_port-shoul.patch
 	patches.drivers/mlx4-0214-mellanox-Logging-message-cleanups.patch
 	patches.drivers/mlx4-0215-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.fixes/radix-tree-introduce-bit-optimized-iterator.patch
 
 	########################################################
 	# Wireless Networking
