--- a/series.conf
+++ b/series.conf
@@ -16797,6 +16797,7 @@
 	patches.drivers/mlx4-0191-net-mlx4-Support-shutdown-interface.patch
 	patches.drivers/mlx4-0192-net-mlx4_core-Fix-memory-access-error-in-mlx4_QUERY_.patch
 	patches.drivers/mlx4-0193-net-mlx4_core-Fix-wrong-dump-of-the-vxlan-offloads-d.patch
+	patches.drivers/mlx4-0194-net-mlx4_core-Load-the-IB-driver-when-the-device-sup.patch
 
 	########################################################
 	# Wireless Networking
