--- a/series.conf
+++ b/series.conf
@@ -16888,6 +16888,7 @@
 	patches.fixes/nick-kvfree-from-apparmor.patch
 	patches.drivers/mlx4-0283-net-mlx4_en-tx_info-allocated-with-kmalloc-instead-o.patch
 	patches.drivers/mlx4-0284-net-mlx4_en-Avoid-a-cache-line-miss-in-TX-completion.patch
+	patches.drivers/mlx4-0285-net-mlx4_en-Use-prefetch-in-tx-path.patch
 
 	########################################################
 	# Wireless Networking
