--- a/series.conf
+++ b/series.conf
@@ -16870,6 +16870,7 @@
 	patches.drivers/mlx4-0264-IB-mlx4-Avoid-accessing-netdevice-when-building-RoCE.patch
 	patches.drivers/mlx4-0265-IB-mlx4-Do-not-allow-APM-under-RoCE.patch
 	patches.drivers/mlx4-0266-net-mlx4_core-Allow-not-to-specify-probe_vf-in-SRIOV.patch
+	patches.drivers/mlx4-0267-treewide-fix-errors-in-printk.patch
 
 	########################################################
 	# Wireless Networking
