net/mlx4_en: Optimize Rx fast path filter checks (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16626,6 +16626,7 @@
 	patches.drivers/mlx4-0020-net-mlx4_en-Fix-error-propagation-for-ethtool-helper.patch
 	patches.drivers/mlx4-0021-net-mlx4_en-Fix-compilation-error-when-CONFIG_INET-i.patch
 	patches.drivers/mlx4-0022-net-mlx4_en-Optimize-loopback-related-checks-in-data.patch
+	patches.drivers/mlx4-0023-net-mlx4_en-Optimize-Rx-fast-path-filter-checks.patch
 
 	########################################################
 	# Wireless Networking
