net/mlx4: Add data structures to support N-Ports per VF (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16799,6 +16799,7 @@
 	patches.drivers/mlx4-0193-net-mlx4_core-Fix-wrong-dump-of-the-vxlan-offloads-d.patch
 	patches.drivers/mlx4-0194-net-mlx4_core-Load-the-IB-driver-when-the-device-sup.patch
 	patches.drivers/mlx4-0195-mlx4-Don-t-receive-packets-when-the-napi-budget-0.patch
+	patches.drivers/mlx4-0196-net-mlx4-Add-data-structures-to-support-N-Ports-per-.patch
 
 	########################################################
 	# Wireless Networking
