--- a/series.conf
+++ b/series.conf
@@ -16723,6 +16723,7 @@
 	patches.drivers/mlx4-0117-net-mlx4_en-Disable-global-flow-control-when-PFC-ena.patch
 	patches.drivers/mlx4-0118-net-mlx4_en-Notify-user-when-TX-ring-in-error-state.patch
 	patches.drivers/mlx4-0119-net-mlx4_en-Fix-handling-of-dma_map-failure.patch
+	patches.drivers/mlx4-0120-net-mlx4_en-Reduce-scope-of-local-variables-in-mlx4_.patch
 
 	########################################################
 	# Wireless Networking
