net/mlx4: USe one wrapper that returns -EPERM (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16804,6 +16804,7 @@
 	patches.drivers/mlx4-0198-net-mlx4-Adapt-code-for-N-Port-VF.patch
 	patches.drivers/mlx4-0199-net-mlx4-Adapt-num_vfs-probed_vf-params-for-single-p.patch
 	patches.drivers/mlx4-0200-mlx4-Use-actual-number-of-PCI-functions-PF-VFs-for-a.patch
+	patches.drivers/mlx4-0201-net-mlx4-USe-one-wrapper-that-returns-EPERM.patch
 
 	########################################################
 	# Wireless Networking
