--- a/series.conf
+++ b/series.conf
@@ -16792,6 +16792,7 @@
 	patches.drivers/mlx4-0186-net-mlx4_en-Use-union-for-BlueFlame-WQE.patch
 	patches.drivers/mlx4-0187-net-mlx4_en-Change-Connect-X-description-in-kconfig.patch
 	patches.drivers/mlx4-0188-net-IB-mlx-Bump-all-Mellanox-driver-versions.patch
+	patches.drivers/mlx4-0189-net-mlx4_en-mlx4_en_verify_params-can-be-static.patch
 
 	########################################################
 	# Wireless Networking
