net/mlx4: Unused local variable in mlx4_opreq_action (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16729,6 +16729,7 @@
 	patches.drivers/mlx4-0123-net-mlx4_en-Fix-pages-never-dma-unmapped-on-rx.patch
 	patches.drivers/mlx4-0124-net-mlx4-Clean-the-code-to-eliminate-trivial-build-w.patch
 	patches.drivers/mlx4-0125-net-mlx4-Fix-typo-move-similar-defs-to-same-location.patch
+	patches.drivers/mlx4-0126-net-mlx4-Unused-local-variable-in-mlx4_opreq_action.patch
 
 	########################################################
 	# Wireless Networking
