--- a/series.conf
+++ b/series.conf
@@ -16627,6 +16627,7 @@
 	patches.drivers/mlx4-0021-net-mlx4_en-Fix-compilation-error-when-CONFIG_INET-i.patch
 	patches.drivers/mlx4-0022-net-mlx4_en-Optimize-loopback-related-checks-in-data.patch
 	patches.drivers/mlx4-0023-net-mlx4_en-Optimize-Rx-fast-path-filter-checks.patch
+	patches.drivers/mlx4-0024-net-mlx4_en-Cleanup-multiline-strings.patch
 
 	########################################################
 	# Wireless Networking
