--- a/series.conf
+++ b/series.conf
@@ -16769,6 +16769,7 @@
 	patches.drivers/mlx4-0163-net-mlx4-slight-optimization-of-addr-compare.patch
 	patches.drivers/mlx4-0164-mlx4_en-Add-PTP-hardware-clock.patch
 	patches.drivers/mlx4-0165-mlx4_en-Only-cycle-port-if-HW-timestamp-config-chang.patch
+	patches.fixes/PCI-Add-PCIe-Link-Capability-link-speed-and-width-na.patch
 
 	########################################################
 	# Wireless Networking
