net/mlx4_en: Run loopback test only when port is up (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16839,6 +16839,7 @@
 	patches.drivers/mlx4-0233-net-mlx4_en-Use-affinity-hint.patch
 	patches.drivers/mlx4-0234-net-mlx4_core-Fix-the-error-flow-when-probing-with-i.patch
 	patches.drivers/mlx4-0235-net-mlx4_en-Fix-set-port-ratelimit-for-40GE.patch
+	patches.drivers/mlx4-0236-net-mlx4_en-Run-loopback-test-only-when-port-is-up.patch
 
 	########################################################
 	# Wireless Networking
