net/mlx4_en: Fix uninitialized use of 'port_up' in mlx4_en_set_channels() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16829,6 +16829,7 @@
 	patches.drivers/mlx4-0223-net-mlx4_en-Protect-MAC-address-modification-with-th.patch
 	patches.drivers/mlx4-0224-net-mlx4_en-Using-positive-error-value-for-unsigned.patch
 	patches.drivers/mlx4-0225-net-mlx4_core-Fix-inaccurate-return-value-of-mlx4_fl.patch
+	patches.drivers/mlx4-0226-net-mlx4_en-Fix-uninitialized-use-of-port_up-in-mlx4.patch
 
 	########################################################
 	# Wireless Networking
