net/mlx4_core: Replace sscanf() with kstrtoint() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16706,6 +16706,7 @@
 	patches.drivers/mlx4-0100-net-mlx4_en-Change-log-level-from-error-to-debug-for.patch
 	patches.drivers/mlx4-0101-net-mlx4_en-Fix-a-race-between-napi-poll-function-an.patch
 	patches.drivers/mlx4-0102-net-mlx4_en-Add-prints-when-TX-timeout-occurs.patch
+	patches.drivers/mlx4-0103-net-mlx4_core-Replace-sscanf-with-kstrtoint.patch
 
 	########################################################
 	# Wireless Networking
