net/mlx4: Move Ethernet related functionality from mlx4_core to mlx4_en (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16628,6 +16628,7 @@
 	patches.drivers/mlx4-0022-net-mlx4_en-Optimize-loopback-related-checks-in-data.patch
 	patches.drivers/mlx4-0023-net-mlx4_en-Optimize-Rx-fast-path-filter-checks.patch
 	patches.drivers/mlx4-0024-net-mlx4_en-Cleanup-multiline-strings.patch
+	patches.drivers/mlx4-0025-net-mlx4-Move-Ethernet-related-functionality-from-ml.patch
 
 	########################################################
 	# Wireless Networking
