net/mlx4_en: Advertize DCB_CAP_DCBX_HOST in getdcbx (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16664,6 +16664,7 @@
 	patches.drivers/mlx4-0058-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
 	patches.drivers/mlx4-0059-net-mlx4_core-Added-proper-description-for-two-devic.patch
 	patches.drivers/mlx4-0060-net-mlx4_en-Enable-DCB-ETS-ops-only-when-supported-b.patch
+	patches.drivers/mlx4-0061-net-mlx4_en-Advertize-DCB_CAP_DCBX_HOST-in-getdcbx.patch
 
 	########################################################
 	# Wireless Networking
