net/mlx4_en: Don't reassign port mac address on firmware that supports it (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16620,6 +16620,7 @@
 	patches.drivers/mlx4-0014-net-mlx4_en-Block-insertion-of-ethtool-steering-rule.patch
 	patches.drivers/mlx4-0015-net-mlx4_en-Fix-ethtool-rules-leftovers-after-module.patch
 	patches.drivers/mlx4-0016-net-mlx4_core-Use-firmware-driven-flow-steering-hash.patch
+	patches.drivers/mlx4-0017-net-mlx4_en-Don-t-reassign-port-mac-address-on-firmw.patch
 
 	########################################################
 	# Wireless Networking
