--- a/series.conf
+++ b/series.conf
@@ -16816,6 +16816,7 @@
 	patches.drivers/mlx4-0210-net-mlx4_core-Don-t-issue-PCIe-speed-width-checks-fo.patch
 	patches.drivers/mlx4-0211-mlx4_core-Fix-memory-leaks-in-SR-IOV-error-paths.patch
 	patches.drivers/mlx4-0212-mlx4_core-Fix-incorrect-FLAGS1-bitmap-test-in-mlx4_Q.patch
+	patches.drivers/mlx4-0213-IB-mlx4-SET_PORT-called-by-mlx4_ib_modify_port-shoul.patch
 
 	########################################################
 	# Wireless Networking
