--- a/series.conf
+++ b/series.conf
@@ -16693,6 +16693,7 @@
 	patches.drivers/mlx4-0087-net-mlx4_core-Add-missing-report-on-VST-and-spoof-ch.patch
 	patches.drivers/mlx4-0088-net-mlx4-Strengthen-VLAN-tags-priorities-enforcement.patch
 	patches.drivers/mlx4-0089-net-mlx4_en-Fix-adaptive-moderation-cq-update.patch
+	patches.drivers/mlx4-0090-net-mlx4_en-Handle-unassigned-VF-MAC-address-correct.patch
 
 	########################################################
 	# Wireless Networking
