--- a/series.conf
+++ b/series.conf
@@ -16623,6 +16623,7 @@
 	patches.drivers/mlx4-0017-net-mlx4_en-Don-t-reassign-port-mac-address-on-firmw.patch
 	patches.drivers/mlx4-0018-net-mlx4_en-Fix-transmit-timeout-when-driver-restart.patch
 	patches.drivers/mlx4-0019-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
+	patches.drivers/mlx4-0020-net-mlx4_en-Fix-error-propagation-for-ethtool-helper.patch
 
 	########################################################
 	# Wireless Networking
