mlx4_core: Rename MPT-related functions to have mpt_ prefix (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16638,6 +16638,7 @@
 	patches.drivers/mlx4-0032-IB-mlx4-Fix-bug-unwinding-on-error-in-mlx4_ib_init_s.patch
 	patches.drivers/mlx4-0033-IB-mlx4-Adjust-duplicate-test.patch
 	patches.drivers/mlx4-0034-IB-mlx4_ib-Remove-local-invalidate-segment-unused-fi.patch
+	patches.drivers/mlx4-0035-mlx4_core-Rename-MPT-related-functions-to-have-mpt_-.patch
 
 	########################################################
 	# Wireless Networking
