net/mlx4_core: Read HCA frequency and map internal clock (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16669,6 +16669,7 @@
 	patches.drivers/mlx4-0063-net-mlx4_core-Translate-guest-B0-steering-rules-to-D.patch
 	patches.drivers/mlx4-0064-net-mlx4_en-set-correct-MTU-in-SRIOV.patch
 	patches.drivers/mlx4-0065-net-mlx4_core-Add-timestamping-device-capability.patch
+	patches.drivers/mlx4-0066-net-mlx4_core-Read-HCA-frequency-and-map-internal-cl.patch
 
 	########################################################
 	# Wireless Networking
