net/mlx4_en: Datapath resources allocated dynamically (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16745,6 +16745,7 @@
 	patches.drivers/mlx4-0139-net-mlx4_en-Add-RFS-support-in-UDP.patch
 	patches.drivers/mlx4-0140-net-mlx4_core-Initialize-all-mailbox-buffers-to-zero.patch
 	patches.drivers/mlx4-0141-net-mlx4_core-Add-immediate-activate-for-VGT-VST-VGT.patch
+	patches.drivers/mlx4-0142-net-mlx4_en-Datapath-resources-allocated-dynamically.patch
 
 	########################################################
 	# Wireless Networking
