--- a/series.conf
+++ b/series.conf
@@ -16833,6 +16833,7 @@
 	patches.drivers/mlx4-0227-net-mlx4_core-Deprecate-use_prio-module-parameter.patch
 	patches.drivers/mlx4-0228-net-mlx4_core-Replace-pr_warning-with-pr_warn.patch
 	patches.drivers/mlx4-0229-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
+	patches.drivers/mlx4-0230-net-mlx4_core-Fix-SRIOV-free-pool-management-when-en.patch
 
 	########################################################
 	# Wireless Networking
