net/mlx4_core: Fail device init if num_vfs is negative (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16708,6 +16708,7 @@
 	patches.drivers/mlx4-0102-net-mlx4_en-Add-prints-when-TX-timeout-occurs.patch
 	patches.drivers/mlx4-0103-net-mlx4_core-Replace-sscanf-with-kstrtoint.patch
 	patches.drivers/mlx4-0104-net-mlx4_core-Add-warning-in-case-of-command-timeout.patch
+	patches.drivers/mlx4-0105-net-mlx4_core-Fail-device-init-if-num_vfs-is-negativ.patch
 
 	########################################################
 	# Wireless Networking
