net/mlx4_core: Adjust port number in qp_attach wrapper when detaching (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16811,6 +16811,7 @@
 	patches.drivers/mlx4-0205-mlx4_core-Make-buffer-larger-to-avoid-overflow-warni.patch
 	patches.drivers/mlx4-0206-net-mlx4_core-Preserve-pci_dev_data-after-__mlx4_rem.patch
 	patches.drivers/mlx4-0207-mlx4_en-don-t-use-napi_synchronize-inside-mlx4_en_ne.patch
+	patches.drivers/mlx4-0208-net-mlx4_core-Adjust-port-number-in-qp_attach-wrappe.patch
 
 	########################################################
 	# Wireless Networking
