--- a/series.conf
+++ b/series.conf
@@ -16801,6 +16801,7 @@
 	patches.drivers/mlx4-0195-mlx4-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/mlx4-0196-net-mlx4-Add-data-structures-to-support-N-Ports-per-.patch
 	patches.drivers/mlx4-0197-net-mlx4-Add-utils-for-N-Port-VFs.patch
+	patches.drivers/mlx4-0198-net-mlx4-Adapt-code-for-N-Port-VF.patch
 
 	########################################################
 	# Wireless Networking
