net/mlx4_en: set correct MTU in SRIOV (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16667,6 +16667,7 @@
 	patches.drivers/mlx4-0061-net-mlx4_en-Advertize-DCB_CAP_DCBX_HOST-in-getdcbx.patch
 	patches.drivers/mlx4-0062-net-mlx4_core-Add-helper-function-to-translate-B0-st.patch
 	patches.drivers/mlx4-0063-net-mlx4_core-Translate-guest-B0-steering-rules-to-D.patch
+	patches.drivers/mlx4-0064-net-mlx4_en-set-correct-MTU-in-SRIOV.patch
 
 	########################################################
 	# Wireless Networking
