net/mlx4_core: Fix inaccurate return value of mlx4_flow_attach() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16828,6 +16828,7 @@
 	patches.drivers/mlx4-0222-net-mlx4_core-Removed-unnecessary-bit-operation-cond.patch
 	patches.drivers/mlx4-0223-net-mlx4_en-Protect-MAC-address-modification-with-th.patch
 	patches.drivers/mlx4-0224-net-mlx4_en-Using-positive-error-value-for-unsigned.patch
+	patches.drivers/mlx4-0225-net-mlx4_core-Fix-inaccurate-return-value-of-mlx4_fl.patch
 
 	########################################################
 	# Wireless Networking
