--- a/series.conf
+++ b/series.conf
@@ -16704,6 +16704,7 @@
 	patches.drivers/mlx4-0098-net-mlx4_en-Do-not-query-stats-when-device-port-is-d.patch
 	patches.drivers/mlx4-0099-net-mlx4_en-Move-register_netdev-to-the-end-of-initi.patch
 	patches.drivers/mlx4-0100-net-mlx4_en-Change-log-level-from-error-to-debug-for.patch
+	patches.drivers/mlx4-0101-net-mlx4_en-Fix-a-race-between-napi-poll-function-an.patch
 
 	########################################################
 	# Wireless Networking
