drivers/net: delete non-required instances of include <linux/init.h> (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16772,6 +16772,7 @@
 	patches.fixes/PCI-Add-PCIe-Link-Capability-link-speed-and-width-na.patch
 	patches.drivers/mlx4-0167-net-mlx4_core-Warn-if-device-doesn-t-have-enough-PCI.patch
 	patches.drivers/mlx4-0168-mlx4_en-Select-PTP_1588_CLOCK.patch
+	patches.drivers/mlx4-0169-drivers-net-delete-non-required-instances-of-include.patch
 
 	########################################################
 	# Wireless Networking
