--- a/series.conf
+++ b/series.conf
@@ -16705,6 +16705,7 @@
 	patches.drivers/mlx4-0099-net-mlx4_en-Move-register_netdev-to-the-end-of-initi.patch
 	patches.drivers/mlx4-0100-net-mlx4_en-Change-log-level-from-error-to-debug-for.patch
 	patches.drivers/mlx4-0101-net-mlx4_en-Fix-a-race-between-napi-poll-function-an.patch
+	patches.drivers/mlx4-0102-net-mlx4_en-Add-prints-when-TX-timeout-occurs.patch
 
 	########################################################
 	# Wireless Networking
