--- a/series.conf
+++ b/series.conf
@@ -16755,6 +16755,7 @@
 	patches.drivers/mlx4-0149-net-mlx4_core-destroy-workqueue-when-driver-fails-to.patch
 	patches.drivers/mlx4-0150-IB-mlx4-Fix-error-return-code.patch
 	patches.drivers/mlx4-0151-mlx4_en-Implement-the-SIOCGHWTSTAMP-ioctl.patch
+	patches.drivers/mlx4-0152-mlx4_core-Roll-back-round-robin-bitmap-allocation-co.patch
 
 	########################################################
 	# Wireless Networking
