net/mlx4_en: Avoid calling bswap in tx fast path (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16883,6 +16883,7 @@
 	patches.drivers/mlx4-0277-net-mlx4_core-Deprecate-error-message-at-ConnectX-2-.patch
 	patches.drivers/mlx4-0278-net-mlx4_en-Code-cleanups-in-tx-path.patch
 	patches.drivers/mlx4-0279-net-mlx4_en-Align-tx-path-structures-to-cache-lines.patch
+	patches.drivers/mlx4-0280-net-mlx4_en-Avoid-calling-bswap-in-tx-fast-path.patch
 
 	########################################################
 	# Wireless Networking
