IB/mlx4: Do not allow APM under RoCE (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16868,6 +16868,7 @@
 	patches.drivers/mlx4-0262-IB-mlx4-Avoid-executing-gid-task-when-device-is-bein.patch
 	patches.drivers/mlx4-0263-mlx4-Fix-mlx4-reg-unreg-mac-to-work-properly-with-0-.patch
 	patches.drivers/mlx4-0264-IB-mlx4-Avoid-accessing-netdevice-when-building-RoCE.patch
+	patches.drivers/mlx4-0265-IB-mlx4-Do-not-allow-APM-under-RoCE.patch
 
 	########################################################
 	# Wireless Networking
