mlx4: Fix mlx4 reg/unreg mac to work properly with 0-mac addresses (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16866,6 +16866,7 @@
 	patches.drivers/mlx4-0260-IB-mlx4-Disable-TSO-for-Connect-X-rev.-A0-HCAs.patch
 	patches.drivers/mlx4-0261-IB-mlx4-Fix-lockdep-splat-for-the-iboe-lock.patch
 	patches.drivers/mlx4-0262-IB-mlx4-Avoid-executing-gid-task-when-device-is-bein.patch
+	patches.drivers/mlx4-0263-mlx4-Fix-mlx4-reg-unreg-mac-to-work-properly-with-0-.patch
 
 	########################################################
 	# Wireless Networking
