net/mlx4_en: Check device state when setting coalescing (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16724,6 +16724,7 @@
 	patches.drivers/mlx4-0118-net-mlx4_en-Notify-user-when-TX-ring-in-error-state.patch
 	patches.drivers/mlx4-0119-net-mlx4_en-Fix-handling-of-dma_map-failure.patch
 	patches.drivers/mlx4-0120-net-mlx4_en-Reduce-scope-of-local-variables-in-mlx4_.patch
+	patches.drivers/mlx4-0121-net-mlx4_en-Check-device-state-when-setting-coalesci.patch
 
 	########################################################
 	# Wireless Networking
