net/mlx4_en: Use local var in tx flow for skb_shinfo(skb) (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16891,6 +16891,7 @@
 	patches.drivers/mlx4-0285-net-mlx4_en-Use-prefetch-in-tx-path.patch
 	patches.drivers/mlx4-0286-net-mlx4_en-Avoid-false-sharing-in-mlx4_en_en_proces.patch
 	patches.drivers/mlx4-0287-net-mlx4_en-mlx4_en_xmit-reads-ring-cons-once-and-ah.patch
+	patches.drivers/mlx4-0288-net-mlx4_en-Use-local-var-in-tx-flow-for-skb_shinfo-.patch
 
 	########################################################
 	# Wireless Networking
