--- a/series.conf
+++ b/series.conf
@@ -16649,6 +16649,7 @@
 	patches.drivers/mlx4-0043-net-mlx4_core-Disable-mlx4_QP_ATTACH-calls-from-gues.patch
 	patches.drivers/mlx4-0044-net-mlx4_core-Turn-off-device-managed-FS-bit-in-dev-.patch
 	patches.drivers/mlx4-0045-net-mlx4_core-Fix-endianness-bug-in-set_param_l.patch
+	patches.drivers/mlx4-0046-net-mlx4_en-Fix-race-when-setting-the-device-MAC-add.patch
 
 	########################################################
 	# Wireless Networking
