mlx4_core: Disable memory windows for virtual functions (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16643,6 +16643,7 @@
 	patches.drivers/mlx4-0037-IB-mlx4-Convert-is_xxx-variables-in-build_mlx_header.patch
 	patches.drivers/mlx4-0038-IB-mlx4-Fix-compiler-warning-about-uninitialized-vla.patch
 	patches.drivers/mlx4-0039-IB-mlx4-Remove-redundant-NULL-check-before-kfree.patch
+	patches.drivers/mlx4-0040-mlx4_core-Disable-memory-windows-for-virtual-functio.patch
 
 	########################################################
 	# Wireless Networking
