include: Convert ethernet mac address declarations to use ETH_ALEN (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16717,6 +16717,7 @@
 	patches.drivers/mlx4-0111-mlx4_core-Fix-XRC-QPs-detection-in-the-resource-trac.patch
 	patches.drivers/mlx4-0112-net-mlx4_en-Fix-BlueFlame-race.patch
 	patches.drivers/mlx4-0113-net-mlx4_core-Respond-to-operation-request-by-firmwa.patch
+	patches.drivers/mlx4-0114-include-Convert-ethernet-mac-address-declarations-to.patch
 
 	########################################################
 	# Wireless Networking
