--- a/series.conf
+++ b/series.conf
@@ -16663,6 +16663,7 @@
 	patches.drivers/mlx4-0057-drivers-net-Remove-unnecessary-OOM-messages-after-ne.patch
 	patches.drivers/mlx4-0058-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
 	patches.drivers/mlx4-0059-net-mlx4_core-Added-proper-description-for-two-devic.patch
+	patches.drivers/mlx4-0060-net-mlx4_en-Enable-DCB-ETS-ops-only-when-supported-b.patch
 
 	########################################################
 	# Wireless Networking
