net/mlx4_en: Change Connect-X description in kconfig (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16790,6 +16790,7 @@
 	patches.drivers/mlx4-0184-net-mlx4_en-Fix-selftest-failing-on-non-10G-link-spe.patch
 	patches.drivers/mlx4-0185-net-mlx4_core-Fix-sparse-warning.patch
 	patches.drivers/mlx4-0186-net-mlx4_en-Use-union-for-BlueFlame-WQE.patch
+	patches.drivers/mlx4-0187-net-mlx4_en-Change-Connect-X-description-in-kconfig.patch
 
 	########################################################
 	# Wireless Networking
