net/mlx4_en: User prio mapping gets corrupted when changing number of channels (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16822,6 +16822,7 @@
 	patches.fixes/radix-tree-introduce-bit-optimized-iterator.patch
 	patches.fixes/radix-tree-fix-contiguous-iterator.patch
 	patches.drivers/mlx4-0218-net-mlx4_core-Enforce-irq-affinity-changes-immediatl.patch
+	patches.drivers/mlx4-0219-net-mlx4_en-User-prio-mapping-gets-corrupted-when-ch.patch
 
 	########################################################
 	# Wireless Networking
