--- a/series.conf
+++ b/series.conf
@@ -16625,6 +16625,7 @@
 	patches.drivers/mlx4-0019-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/mlx4-0020-net-mlx4_en-Fix-error-propagation-for-ethtool-helper.patch
 	patches.drivers/mlx4-0021-net-mlx4_en-Fix-compilation-error-when-CONFIG_INET-i.patch
+	patches.drivers/mlx4-0022-net-mlx4_en-Optimize-loopback-related-checks-in-data.patch
 
 	########################################################
 	# Wireless Networking
