net/mlx4_core: VFs must ignore the enable_64b_cqe_eqe module param (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16713,6 +16713,7 @@
 	patches.drivers/mlx4-0107-net-mlx4-fix-small-memory-leak-on-error.patch
 	patches.drivers/mlx4-0108-IB-mlx4-Use-default-pkey-when-creating-tunnel-QPs.patch
 	patches.drivers/mlx4-0109-net-mlx4_core-Don-t-give-VFs-MAC-addresses-which-are.patch
+	patches.drivers/mlx4-0110-net-mlx4_core-VFs-must-ignore-the-enable_64b_cqe_eqe.patch
 
 	########################################################
 	# Wireless Networking
