net/mlx4_en: Issue the dump eth statistics command under lock (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16606,6 +16606,7 @@
 	# mlx4 SP4 update (bug#919382 FATE#317529)
 	patches.drivers/mlx4-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/mlx4-0002-net-mlx4_en-remove-redundant-code.patch
+	patches.drivers/mlx4-0003-net-mlx4_en-Issue-the-dump-eth-statistics-command-un.patch
 
 	########################################################
 	# Wireless Networking
