--- a/series.conf
+++ b/series.conf
@@ -16633,6 +16633,7 @@
 	patches.drivers/mlx4-0027-net-mlx4_en-Manage-hash-of-MAC-addresses-per-port.patch
 	patches.drivers/mlx4-0028-net-mlx4_en-Implement-ndo-fdb-functionality.patch
 	patches.drivers/mlx4-0029-mlx4_en-Fix-BQL-reset-TX-queue-call-point.patch
+	patches.drivers/mlx4-0030-drivers-net-Remove-remaining-alloc-OOM-messages.patch
 
 	########################################################
 	# Wireless Networking
