--- a/series.conf
+++ b/series.conf
@@ -16848,6 +16848,7 @@
 	patches.drivers/mlx4-0242-net-mlx4_en-IRQ-affinity-hint-is-not-cleared-on-port.patch
 	patches.drivers/mlx4-0243-net-mlx4_en-Ignore-budget-on-TX-napi-polling.patch
 	patches.drivers/mlx4-0244-net-mlx4_core-Fix-leakage-of-SW-multicast-entries.patch
+	patches.drivers/mlx4-0245-net-mlx4_core-Make-sure-that-negative-array-index-is.patch
 
 	########################################################
 	# Wireless Networking
