net/mlx4_core: Respond to operation request by firmware (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16716,6 +16716,7 @@
 	patches.drivers/mlx4-0110-net-mlx4_core-VFs-must-ignore-the-enable_64b_cqe_eqe.patch
 	patches.drivers/mlx4-0111-mlx4_core-Fix-XRC-QPs-detection-in-the-resource-trac.patch
 	patches.drivers/mlx4-0112-net-mlx4_en-Fix-BlueFlame-race.patch
+	patches.drivers/mlx4-0113-net-mlx4_core-Respond-to-operation-request-by-firmwa.patch
 
 	########################################################
 	# Wireless Networking
