mlx4_core: Fix some indenting in mlx4_ib_add() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16807,6 +16807,7 @@
 	patches.drivers/mlx4-0201-net-mlx4-USe-one-wrapper-that-returns-EPERM.patch
 	patches.drivers/mlx4-0202-mlx4-Add-support-for-CONFIG_DEV-command.patch
 	patches.drivers/mlx4-0203-net-mlx4_core-pass-pci_device_id.driver_data-to-__ml.patch
+	patches.drivers/mlx4-0204-mlx4_core-Fix-some-indenting-in-mlx4_ib_add.patch
 
 	########################################################
 	# Wireless Networking
