--- a/series.conf
+++ b/series.conf
@@ -16892,6 +16892,7 @@
 	patches.drivers/mlx4-0286-net-mlx4_en-Avoid-false-sharing-in-mlx4_en_en_proces.patch
 	patches.drivers/mlx4-0287-net-mlx4_en-mlx4_en_xmit-reads-ring-cons-once-and-ah.patch
 	patches.drivers/mlx4-0288-net-mlx4_en-Use-local-var-in-tx-flow-for-skb_shinfo-.patch
+	patches.drivers/mlx4-0289-net-mlx4_en-Use-local-var-for-skb_headlen-skb.patch
 
 	########################################################
 	# Wireless Networking
