--- a/series.conf
+++ b/series.conf
@@ -16666,6 +16666,7 @@
 	patches.drivers/mlx4-0060-net-mlx4_en-Enable-DCB-ETS-ops-only-when-supported-b.patch
 	patches.drivers/mlx4-0061-net-mlx4_en-Advertize-DCB_CAP_DCBX_HOST-in-getdcbx.patch
 	patches.drivers/mlx4-0062-net-mlx4_core-Add-helper-function-to-translate-B0-st.patch
+	patches.drivers/mlx4-0063-net-mlx4_core-Translate-guest-B0-steering-rules-to-D.patch
 
 	########################################################
 	# Wireless Networking
