net/mlx4_en: Fix resource leak in error flow (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16700,6 +16700,7 @@
 	patches.drivers/mlx4-0094-net-mlx4-use-one-page-fragment-per-incoming-frame.patch
 	patches.drivers/mlx4-0095-mlx4-use-__netdev_pick_tx-instead-of-__skb_tx_hash-i.patch
 	patches.drivers/mlx4-0096-mlx4-allow-order-0-memory-allocations-in-RX-path.patch
+	patches.drivers/mlx4-0097-net-mlx4_en-Fix-resource-leak-in-error-flow.patch
 
 	########################################################
 	# Wireless Networking
