--- a/series.conf
+++ b/series.conf
@@ -16715,6 +16715,7 @@
 	patches.drivers/mlx4-0109-net-mlx4_core-Don-t-give-VFs-MAC-addresses-which-are.patch
 	patches.drivers/mlx4-0110-net-mlx4_core-VFs-must-ignore-the-enable_64b_cqe_eqe.patch
 	patches.drivers/mlx4-0111-mlx4_core-Fix-XRC-QPs-detection-in-the-resource-trac.patch
+	patches.drivers/mlx4-0112-net-mlx4_en-Fix-BlueFlame-race.patch
 
 	########################################################
 	# Wireless Networking
