apparmor: no need to delay vfree() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16884,6 +16884,7 @@
 	patches.drivers/mlx4-0278-net-mlx4_en-Code-cleanups-in-tx-path.patch
 	patches.drivers/mlx4-0279-net-mlx4_en-Align-tx-path-structures-to-cache-lines.patch
 	patches.drivers/mlx4-0280-net-mlx4_en-Avoid-calling-bswap-in-tx-fast-path.patch
+	patches.fixes/apparmor-no-need-to-delay-vfree.patch
 
 	########################################################
 	# Wireless Networking
