--- a/series.conf
+++ b/series.conf
@@ -16689,6 +16689,7 @@
 	patches.drivers/mlx4-0083-mlx4-Match-DMFS-promiscuous-field-names-to-firmware-.patch
 	patches.drivers/mlx4-0084-mlx4_core-Change-a-few-DMFS-fields-names-to-match-fi.patch
 	patches.drivers/mlx4-0085-mlx4_core-Directly-expose-fields-of-DMFS-HW-rule-con.patch
+	patches.drivers/mlx4-0086-mlx4_core-Expose-a-few-helpers-to-fill-DMFS-HW-struc.patch
 
 	########################################################
 	# Wireless Networking
