net/mlx4_en: current_mac isn't updated in port up (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16853,6 +16853,7 @@
 	patches.drivers/mlx4-0247-net-mlx4_core-In-SR-IOV-mode-host-should-add-promisc.patch
 	patches.drivers/mlx4-0248-net-mlx4_core-Remove-MCG-in-case-it-is-attached-to-p.patch
 	patches.drivers/mlx4-0249-net-mlx4_en-cq-irq_desc-wasn-t-set-in-legacy-EQ-s.patch
+	patches.drivers/mlx4-0250-net-mlx4_en-current_mac-isn-t-updated-in-port-up.patch
 
 	########################################################
 	# Wireless Networking
