net/mlx4_en: Fix handling of dma_map failure (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16722,6 +16722,7 @@
 	patches.drivers/mlx4-0116-net-mlx4_en-Coding-style-cleanup-in-mlx4_en_dcbnl_ie.patch
 	patches.drivers/mlx4-0117-net-mlx4_en-Disable-global-flow-control-when-PFC-ena.patch
 	patches.drivers/mlx4-0118-net-mlx4_en-Notify-user-when-TX-ring-in-error-state.patch
+	patches.drivers/mlx4-0119-net-mlx4_en-Fix-handling-of-dma_map-failure.patch
 
 	########################################################
 	# Wireless Networking
