--- a/series.conf
+++ b/series.conf
@@ -16857,6 +16857,7 @@
 	patches.drivers/mlx4-0251-net-mlx4_en-Disable-blueflame-using-ethtool-private-.patch
 	patches.drivers/mlx4-0252-net-mlx4_core-Use-low-memory-profile-on-kdump-kernel.patch
 	patches.drivers/mlx4-0253-net-mlx4_en-Reduce-memory-consumption-on-kdump-kerne.patch
+	patches.drivers/mlx4-0254-net-mlx4_en-mlx4_en_-gs-et_priv_flags-can-be-static.patch
 
 	########################################################
 	# Wireless Networking
