--- a/series.conf
+++ b/series.conf
@@ -16851,6 +16851,7 @@
 	patches.drivers/mlx4-0245-net-mlx4_core-Make-sure-that-negative-array-index-is.patch
 	patches.drivers/mlx4-0246-net-mlx4_core-Make-sure-the-max-number-of-QPs-per-MC.patch
 	patches.drivers/mlx4-0247-net-mlx4_core-In-SR-IOV-mode-host-should-add-promisc.patch
+	patches.drivers/mlx4-0248-net-mlx4_core-Remove-MCG-in-case-it-is-attached-to-p.patch
 
 	########################################################
 	# Wireless Networking
