--- a/series.conf
+++ b/series.conf
@@ -16698,6 +16698,7 @@
 	patches.drivers/mlx4-0092-net-mlx_en-Timestamping-is-not-supported-in-slave-mo.patch
 	patches.drivers/mlx4-0093-treewide-Fix-typo-in-printk.patch
 	patches.drivers/mlx4-0094-net-mlx4-use-one-page-fragment-per-incoming-frame.patch
+	patches.drivers/mlx4-0095-mlx4-use-__netdev_pick_tx-instead-of-__skb_tx_hash-i.patch
 
 	########################################################
 	# Wireless Networking
