net/mlx4_core: Protect QUERY_PORT wrapper from untrusted guests (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16879,6 +16879,7 @@
 	patches.drivers/mlx4-0273-mellanox-Change-en_print-to-return-void.patch
 	patches.drivers/mlx4-0274-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
 	patches.drivers/mlx4-0275-net-mlx4_core-New-init-and-exit-flow-for-mlx4_core.patch
+	patches.drivers/mlx4-0276-net-mlx4_core-Protect-QUERY_PORT-wrapper-from-untrus.patch
 
 	########################################################
 	# Wireless Networking
