--- a/series.conf
+++ b/series.conf
@@ -16867,6 +16867,7 @@
 	patches.drivers/mlx4-0261-IB-mlx4-Fix-lockdep-splat-for-the-iboe-lock.patch
 	patches.drivers/mlx4-0262-IB-mlx4-Avoid-executing-gid-task-when-device-is-bein.patch
 	patches.drivers/mlx4-0263-mlx4-Fix-mlx4-reg-unreg-mac-to-work-properly-with-0-.patch
+	patches.drivers/mlx4-0264-IB-mlx4-Avoid-accessing-netdevice-when-building-RoCE.patch
 
 	########################################################
 	# Wireless Networking
