net/mlx4_en: Ignore irrelevant hypervisor events (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16763,6 +16763,7 @@
 	patches.drivers/mlx4-0157-net-mlx4_core-Expose-physical-port-id-as-PF-VF-capab.patch
 	patches.drivers/mlx4-0158-net-mlx4_en-Configure-the-XPS-queue-mapping-on-drive.patch
 	patches.drivers/mlx4-0159-net-mlx4_core-Set-CQE-EQE-size-to-64B-by-default.patch
+	patches.drivers/mlx4-0160-net-mlx4_en-Ignore-irrelevant-hypervisor-events.patch
 
 	########################################################
 	# Wireless Networking
