net/mlx4_en: Use affinity hint (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16836,6 +16836,7 @@
 	patches.drivers/mlx4-0230-net-mlx4_core-Fix-SRIOV-free-pool-management-when-en.patch
 	patches.drivers/mlx4-0231-net-mlx4_core-Keep-only-one-driver-entry-release-mlx.patch
 	patches.fixes/cpumask-Utility-function-to-set-n-th-cpu-local-cpu-f.patch
+	patches.drivers/mlx4-0233-net-mlx4_en-Use-affinity-hint.patch
 
 	########################################################
 	# Wireless Networking
