mlx4_core: Directly expose fields of DMFS HW rule control segment (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16688,6 +16688,7 @@
 	patches.drivers/mlx4-0082-mlx4_core-Move-DMFS-HW-structs-to-common-header-file.patch
 	patches.drivers/mlx4-0083-mlx4-Match-DMFS-promiscuous-field-names-to-firmware-.patch
 	patches.drivers/mlx4-0084-mlx4_core-Change-a-few-DMFS-fields-names-to-match-fi.patch
+	patches.drivers/mlx4-0085-mlx4_core-Directly-expose-fields-of-DMFS-HW-rule-con.patch
 
 	########################################################
 	# Wireless Networking
