--- a/series.conf
+++ b/series.conf
@@ -16878,6 +16878,7 @@
 	patches.drivers/mlx4-0272-net-mlx4_en-Add-mlx4_en_get_cqe-helper.patch
 	patches.drivers/mlx4-0273-mellanox-Change-en_print-to-return-void.patch
 	patches.drivers/mlx4-0274-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
+	patches.drivers/mlx4-0275-net-mlx4_core-New-init-and-exit-flow-for-mlx4_core.patch
 
 	########################################################
 	# Wireless Networking
