--- a/series.conf
+++ b/series.conf
@@ -16665,6 +16665,7 @@
 	patches.drivers/mlx4-0059-net-mlx4_core-Added-proper-description-for-two-devic.patch
 	patches.drivers/mlx4-0060-net-mlx4_en-Enable-DCB-ETS-ops-only-when-supported-b.patch
 	patches.drivers/mlx4-0061-net-mlx4_en-Advertize-DCB_CAP_DCBX_HOST-in-getdcbx.patch
+	patches.drivers/mlx4-0062-net-mlx4_core-Add-helper-function-to-translate-B0-st.patch
 
 	########################################################
 	# Wireless Networking
