remove init of dev->perm_addr in drivers (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16603,6 +16603,9 @@
 	patches.drivers/cxgb4vf-0031-cxgb4-cxgb4vf-For-T5-use-Packing-and-Padding-Boundar.patch
 	patches.drivers/cxgb4vf-0032-cxgb4vf-FL-Starvation-Threshold-needs-to-be-larger-t.patch
 
+	# mlx4 SP4 update (bug#919382 FATE#317529)
+	patches.drivers/mlx4-0001-remove-init-of-dev-perm_addr-in-drivers.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
