--- a/series.conf
+++ b/series.conf
@@ -16750,6 +16750,7 @@
 	patches.drivers/mlx4-0144-net-mlx4_en-Datapath-structures-are-allocated-per-NU.patch
 	patches.drivers/mlx4-0145-treewide-Fix-typo-in-printk.patch
 	patches.drivers/mlx4-0146-IB-mlx4-Fix-endless-loop-in-resize-CQ.patch
+	patches.drivers/mlx4-0147-IB-mlx4-Fix-device-max-capabilities-check.patch
 
 	########################################################
 	# Wireless Networking
