mlx4_en: Implement the SIOCGHWTSTAMP ioctl (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16754,6 +16754,7 @@
 	patches.drivers/mlx4-0148-net-mlx4_en-Remove-selftest-TX-queues-empty-conditio.patch
 	patches.drivers/mlx4-0149-net-mlx4_core-destroy-workqueue-when-driver-fails-to.patch
 	patches.drivers/mlx4-0150-IB-mlx4-Fix-error-return-code.patch
+	patches.drivers/mlx4-0151-mlx4_en-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 
 	########################################################
 	# Wireless Networking
