--- a/series.conf
+++ b/series.conf
@@ -16748,6 +16748,7 @@
 	patches.drivers/mlx4-0142-net-mlx4_en-Datapath-resources-allocated-dynamically.patch
 	patches.drivers/mlx4-0143-net-mlx4_core-ICM-pages-are-allocated-on-device-NUMA.patch
 	patches.drivers/mlx4-0144-net-mlx4_en-Datapath-structures-are-allocated-per-NU.patch
+	patches.drivers/mlx4-0145-treewide-Fix-typo-in-printk.patch
 
 	########################################################
 	# Wireless Networking
