net/mlx4_core: Limit count field to 24 bits in qp_alloc_res (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16899,6 +16899,7 @@
 	patches.drivers/mlx4-0293-net-add-netdev_txq_bql_-enqueue-complete-_prefetchw-.patch
 	patches.drivers/mlx4-0294-mlx4-fix-race-accessing-page-_count.patch
 	patches.drivers/mlx4-0295-net-mlx4_core-Call-synchronize_irq-before-freeing-EQ.patch
+	patches.drivers/mlx4-0296-net-mlx4_core-Limit-count-field-to-24-bits-in-qp_all.patch
 
 	########################################################
 	# Wireless Networking
