--- a/series.conf
+++ b/series.conf
@@ -16767,6 +16767,7 @@
 	patches.drivers/mlx4-0161-net-mlx4_en-Add-NAPI-support-for-transmit-side.patch
 	patches.drivers/mlx4-0162-net-mlx4_core-Check-port-number-for-validity-before-.patch
 	patches.drivers/mlx4-0163-net-mlx4-slight-optimization-of-addr-compare.patch
+	patches.drivers/mlx4-0164-mlx4_en-Add-PTP-hardware-clock.patch
 
 	########################################################
 	# Wireless Networking
