net/mlx4_en: Verify mlx4_en module parameters (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16783,6 +16783,7 @@
 	patches.drivers/mlx4-0177-net-mlx4_en-Expose-port-number-through-sysfs.patch
 	patches.drivers/mlx4-0178-net-mlx4_en-Fix-bad-use-of-dev_id.patch
 	patches.drivers/mlx4-0179-net-mlx4_en-Fix-UP-limit-in-ieee_ets-prio_tc.patch
+	patches.drivers/mlx4-0180-net-mlx4_en-Verify-mlx4_en-module-parameters.patch
 
 	########################################################
 	# Wireless Networking
