net/mlx4_core: Always use 64 bit resource ID when doing lookup (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16656,6 +16656,7 @@
 	patches.drivers/mlx4-0050-net-mlx4_core-Fix-wrong-mask-applied-on-EQ-numbers-i.patch
 	patches.drivers/mlx4-0051-net-mlx4_core-Fix-wrong-order-of-flow-steering-resou.patch
 	patches.drivers/mlx4-0052-net-mlx4_en-Remove-ethtool-flow-steering-rules-befor.patch
+	patches.drivers/mlx4-0053-net-mlx4_core-Always-use-64-bit-resource-ID-when-doi.patch
 
 	########################################################
 	# Wireless Networking
