net/mlx4: Fix limiting number of IRQ's instead of RSS queues (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16779,6 +16779,7 @@
 	patches.drivers/mlx4-0173-mlx4-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/mlx4-0174-IB-Report-using-RoCE-IP-based-gids-in-port-caps.patch
 	patches.drivers/mlx4-0175-net-mlx4-Set-number-of-RX-rings-in-a-utility-functio.patch
+	patches.drivers/mlx4-0176-net-mlx4-Fix-limiting-number-of-IRQ-s-instead-of-RSS.patch
 
 	########################################################
 	# Wireless Networking
