net/mlx4: Verify port number in __mlx4_unregister_mac (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16840,6 +16840,7 @@
 	patches.drivers/mlx4-0234-net-mlx4_core-Fix-the-error-flow-when-probing-with-i.patch
 	patches.drivers/mlx4-0235-net-mlx4_en-Fix-set-port-ratelimit-for-40GE.patch
 	patches.drivers/mlx4-0236-net-mlx4_en-Run-loopback-test-only-when-port-is-up.patch
+	patches.drivers/mlx4-0237-net-mlx4-Verify-port-number-in-__mlx4_unregister_mac.patch
 
 	########################################################
 	# Wireless Networking
