net/mlx4_core: Add warning in case of command timeouts (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16707,6 +16707,7 @@
 	patches.drivers/mlx4-0101-net-mlx4_en-Fix-a-race-between-napi-poll-function-an.patch
 	patches.drivers/mlx4-0102-net-mlx4_en-Add-prints-when-TX-timeout-occurs.patch
 	patches.drivers/mlx4-0103-net-mlx4_core-Replace-sscanf-with-kstrtoint.patch
+	patches.drivers/mlx4-0104-net-mlx4_core-Add-warning-in-case-of-command-timeout.patch
 
 	########################################################
 	# Wireless Networking
