--- a/series.conf
+++ b/series.conf
@@ -16810,6 +16810,7 @@
 	patches.drivers/mlx4-0204-mlx4_core-Fix-some-indenting-in-mlx4_ib_add.patch
 	patches.drivers/mlx4-0205-mlx4_core-Make-buffer-larger-to-avoid-overflow-warni.patch
 	patches.drivers/mlx4-0206-net-mlx4_core-Preserve-pci_dev_data-after-__mlx4_rem.patch
+	patches.drivers/mlx4-0207-mlx4_en-don-t-use-napi_synchronize-inside-mlx4_en_ne.patch
 
 	########################################################
 	# Wireless Networking
