--- a/series.conf
+++ b/series.conf
@@ -16808,6 +16808,7 @@
 	patches.drivers/mlx4-0202-mlx4-Add-support-for-CONFIG_DEV-command.patch
 	patches.drivers/mlx4-0203-net-mlx4_core-pass-pci_device_id.driver_data-to-__ml.patch
 	patches.drivers/mlx4-0204-mlx4_core-Fix-some-indenting-in-mlx4_ib_add.patch
+	patches.drivers/mlx4-0205-mlx4_core-Make-buffer-larger-to-avoid-overflow-warni.patch
 
 	########################################################
 	# Wireless Networking
