--- a/series.conf
+++ b/series.conf
@@ -16608,6 +16608,7 @@
 	patches.drivers/mlx4-0002-net-mlx4_en-remove-redundant-code.patch
 	patches.drivers/mlx4-0003-net-mlx4_en-Issue-the-dump-eth-statistics-command-un.patch
 	patches.drivers/mlx4-0004-net-mlx4_en-Fix-traffic-loss-under-promiscuous-mode.patch
+	patches.drivers/mlx4-0005-net-mlx4_en-Use-the-correct-netif-lock-on-ndo_set_rx.patch
 
 	########################################################
 	# Wireless Networking
