mellanox: Logging message cleanups (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16817,6 +16817,7 @@
 	patches.drivers/mlx4-0211-mlx4_core-Fix-memory-leaks-in-SR-IOV-error-paths.patch
 	patches.drivers/mlx4-0212-mlx4_core-Fix-incorrect-FLAGS1-bitmap-test-in-mlx4_Q.patch
 	patches.drivers/mlx4-0213-IB-mlx4-SET_PORT-called-by-mlx4_ib_modify_port-shoul.patch
+	patches.drivers/mlx4-0214-mellanox-Logging-message-cleanups.patch
 
 	########################################################
 	# Wireless Networking
