net/mlx4_core: Fix checking order in MR table init (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16737,6 +16737,7 @@
 	patches.drivers/mlx4-0131-net-mlx4_en-Use-vlan-id-instead-of-vlan-index-for-un.patch
 	patches.drivers/mlx4-0132-net-mlx4_core-Resource-tracker-for-reg-unreg-vlans.patch
 	patches.drivers/mlx4-0133-net-mlx4_core-Don-t-fail-reg-unreg-vlan-for-older-gu.patch
+	patches.drivers/mlx4-0134-net-mlx4_core-Fix-checking-order-in-MR-table-init.patch
 
 	########################################################
 	# Wireless Networking
