net/mlx4_en: Add HW timestamping (TS) support (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16670,6 +16670,7 @@
 	patches.drivers/mlx4-0064-net-mlx4_en-set-correct-MTU-in-SRIOV.patch
 	patches.drivers/mlx4-0065-net-mlx4_core-Add-timestamping-device-capability.patch
 	patches.drivers/mlx4-0066-net-mlx4_core-Read-HCA-frequency-and-map-internal-cl.patch
+	patches.drivers/mlx4-0067-net-mlx4_en-Add-HW-timestamping-TS-support.patch
 
 	########################################################
 	# Wireless Networking
