--- a/series.conf
+++ b/series.conf
@@ -16881,6 +16881,7 @@
 	patches.drivers/mlx4-0275-net-mlx4_core-New-init-and-exit-flow-for-mlx4_core.patch
 	patches.drivers/mlx4-0276-net-mlx4_core-Protect-QUERY_PORT-wrapper-from-untrus.patch
 	patches.drivers/mlx4-0277-net-mlx4_core-Deprecate-error-message-at-ConnectX-2-.patch
+	patches.drivers/mlx4-0278-net-mlx4_en-Code-cleanups-in-tx-path.patch
 
 	########################################################
 	# Wireless Networking
