IB/mlx4_ib: Remove local invalidate segment unused fields (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16637,6 +16637,7 @@
 	patches.drivers/mlx4-0031-treewide-Replace-incomming-with-incoming-in-all-comm.patch
 	patches.drivers/mlx4-0032-IB-mlx4-Fix-bug-unwinding-on-error-in-mlx4_ib_init_s.patch
 	patches.drivers/mlx4-0033-IB-mlx4-Adjust-duplicate-test.patch
+	patches.drivers/mlx4-0034-IB-mlx4_ib-Remove-local-invalidate-segment-unused-fi.patch
 
 	########################################################
 	# Wireless Networking
