net/mlx4_core: Add timestamping device capability (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16668,6 +16668,7 @@
 	patches.drivers/mlx4-0062-net-mlx4_core-Add-helper-function-to-translate-B0-st.patch
 	patches.drivers/mlx4-0063-net-mlx4_core-Translate-guest-B0-steering-rules-to-D.patch
 	patches.drivers/mlx4-0064-net-mlx4_en-set-correct-MTU-in-SRIOV.patch
+	patches.drivers/mlx4-0065-net-mlx4_core-Add-timestamping-device-capability.patch
 
 	########################################################
 	# Wireless Networking
